--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "robofriends",
-  "homepage": "https://github.com/RaresSanduConstantin/robo-CJS",
+  "homepage": "https://raressanduconstantin.github.io/robo-CJS/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
